# Butterfly

./: .gitignore  AUTHORS  CMakeLists.txt  README  list.c  list.h  makefile  map.c  map.h  object.c  object.h  string_type.c  string_type.h  test  tests.c
tests/: iterator_test.c  iterator_test.h  json_deserialize_test.c  json_deserialize_test.h  json_serialize_test.c  json_serialize_test.h  list_test.c  list_test.h  map_test.c  map_test.h  primitive_test.c  primitive_test.h  string_test.c  string_test.h
